--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,12 @@
   }
 }
 
+@keyframes to-stroke-dashoffset-0 {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
 @keyframes to-translate-x-0 {
   to {
     transform: translateX(0);
