--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.function,
+.tag,
+.atrule {
+  @apply text-fuchsia-700 dark:text-fuchsia-300;
+}
+
+.literal-property,
+.constant,
+.string-property,
+.attr-value,
+.property {
+  @apply text-sky-700 dark:text-sky-300;
+}
+
+.operator,
+.comment {
+  @apply opacity-60;
+}
+
+.punctuation {
+  @apply opacity-40;
+}
